--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@ requests
 beautifulsoup4
 transformers
 sentence-transformers
-langchain-community
-bitsandbytes
-faiss-cpu
 langchain
-streamlit
 langchain-huggingface
+ollama
+chromadb
+langchain-chroma
+streamlit
